--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
   - 2.0.0
+before_script:
+  - bundle exec rake db:migrate && rake db:test:prepare
 script:
   - rake
   - rubocop -D
