--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: ruby
 rvm:
   - 2.0.0
 before_script:
-  - bundle exec rake db:migrate && rake db:test:prepare
+  - bundle exec rake app:db:migrate
+  - bundle exec rake app:db:test:prepare
 script:
-  - rake
+  - bundle exec rake
   - rubocop -D
   - travis-lint
